[gd_scene load_steps=8 format=2]

[ext_resource path="res://interface/Menu.gd" type="Script" id=1]
[ext_resource path="res://interface/fonts/montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://interface/fonts/montserrat_eb_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://interface/buttons/join.png" type="Texture" id=4]
[ext_resource path="res://interface/buttons/join-pressed.png" type="Texture" id=5]
[ext_resource path="res://interface/buttons/create.png" type="Texture" id=6]
[ext_resource path="res://interface/buttons/create-pressed.png" type="Texture" id=7]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -120.0
margin_right = 315.0
margin_bottom = 120.0
custom_constants/separation = 20

[node name="Title2" type="Label" parent="VBoxContainer"]
margin_right = 630.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "Lobby"
align = 1

[node name="NameHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 630.0
margin_bottom = 124.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/NameHBoxContainer"]
margin_right = 255.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "Your name:"
align = 2

[node name="TextField" type="LineEdit" parent="VBoxContainer/NameHBoxContainer"]
margin_left = 275.0
margin_right = 630.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )

[node name="selfIPHBContainer" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 144.0
margin_right = 630.0
margin_bottom = 196.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/selfIPHBContainer"]
margin_right = 174.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "Your IP:"
align = 2

[node name="TextField" type="LineEdit" parent="VBoxContainer/selfIPHBContainer"]
margin_left = 194.0
margin_right = 630.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )

[node name="ServerHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 630.0
margin_bottom = 268.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/ServerHBoxContainer"]
margin_right = 251.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "Server'S IP:"
align = 2

[node name="TextField" type="LineEdit" parent="VBoxContainer/ServerHBoxContainer"]
margin_left = 271.0
margin_right = 630.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )

[node name="ButtonsHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 288.0
margin_right = 630.0
margin_bottom = 384.0
custom_constants/separation = 0

[node name="JoinButton" type="TextureButton" parent="VBoxContainer/ButtonsHBoxContainer"]
margin_right = 315.0
margin_bottom = 96.0
rect_min_size = Vector2( 192, 96 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="CreateButton" type="TextureButton" parent="VBoxContainer/ButtonsHBoxContainer"]
margin_left = 315.0
margin_right = 630.0
margin_bottom = 96.0
rect_min_size = Vector2( 192, 96 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5

[connection signal="text_changed" from="VBoxContainer/NameHBoxContainer/TextField" to="." method="_on_Name_TextField_text_changed"]
[connection signal="pressed" from="VBoxContainer/ButtonsHBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsHBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
